--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,19 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag toolbox:$(date +%s)
+      - uses: actions/checkout@v2
+      - name: Build the Docker image
+        run: docker build . --file Dockerfile --tag toolbox:$(date +%s)
+
+      - name: Login to docker hub
+        run: docker login -u egiptyanin -p $DOCKER_HUB_AUTH
+
+      - name: Relabel
+        run: docker tag toolbox:$(date +%s) egiptyanin/toolbox:v0.0.1
+        run: docker tag toolbox:$(date +%s) egiptyanin/toolbox:latest
+
+      - name: Publish
+        run: docker push egiptyanin/toolbox:latest
+
+      - name: Logout
+        run: docker logout
