--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Build the Docker image
+        env:
+          DOCKER_HUB_AUTH: ${{ secrets.DOCKER_HUB_AUTH }}
         run: env
         #  docker build . --file Dockerfile --tag toolbox:v0.0.1
 
