--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches: [ "ci-test" ]
 
+
 jobs:
 
   build:
@@ -15,17 +16,20 @@ jobs:
       - name: Build the Docker image
         run: docker build . --file Dockerfile --tag toolbox:$GITHUB_SHA
 
-      - name: Relabel (version)
-        run: docker tag toolbox:$GITHUB_SHA egiptyanin/toolbox:v0.0.1
-
-      - name: Relabel (latest)
-        run: docker tag toolbox:$GITHUB_SHA egiptyanin/toolbox:latest
-
+  push:
+    if: ${{ github.ref_type == 'tag' }}
+    steps:
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Relabel (version)
+        run: docker tag toolbox:$GITHUB_SHA egiptyanin/toolbox:$GITHUB_REF
+
+      - name: Relabel (latest)
+        run: docker tag toolbox:$GITHUB_SHA egiptyanin/toolbox:latest
 
       - name: Publish
         run: docker push egiptyanin/toolbox:latest
