--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag toolbox:$GITHUB_SHA
+        run: docker build . --file Dockerfile --tag toolbox:$GITHUB_SHA_$GITHUB_REF
 
   push:
     if: ${{ github.ref_type == 'tag' }}
