--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: Build the Docker image
         run: docker build . --file Dockerfile --tag toolbox:$GITHUB_SHA_$GITHUB_REF
+      - name: Listing
+        run: docker image ls
 
   push:
     if: ${{ github.ref_type == 'tag' }}
