--- a/pipelines.yaml
+++ b/pipelines.yaml
@@ -1,17 +1,31 @@
 resources:
-  - name: myGitRepo
+  - name: docker_repo
     type: GitRepo
     configuration:
       gitProvider: gitIntegration
       path: dmitry-lyutenko/toolbox-images
       branches:
         include: ci-test
-  - name: myBuildInfo
+  - name: toolbox-image
+    type: Image
+    configuration:
+      registry: gitIntegration
+      sourceRepository: toolbox-docker
+      imageName: dimoff.jfrog.io/toolbox-docker/toolbox
+      imageTag: latest
+      autoPull: true
+  - name: docker_build_info
     type: BuildInfo
     configuration:
-      sourceArtifactory: art
-      buildName: toolbox-images
-      buildNumber: 1          
+      sourceArtifactory: gitIntegration
+      buildName: docker_build
+      buildNumber: 1
+  - name: docker_promoted_build_info
+    type: BuildInfo
+    configuration:
+      sourceArtifactory: gitIntegration
+      buildName: docker_build
+      buildNumber: 1
 pipelines:  
   - name: basic_pipeline
     configuration:
@@ -19,60 +33,42 @@ pipelines:
         readOnly:
           my_env_var: "hello"  
     steps:
-      - name: step_1
-        type: Bash
+      - name: docker_build
+        type: DockerBuild
         configuration:
+          affinityGroup: grDocker
+          dockerFileLocation: .
+          dockerImageName: dimoff.jfrog.io/toolbox-docker/toolbox
+          dockerImageTag: ${run_number}
           inputResources:
-            - name: myGitRepo
-          outputResources:
-            - name: myBuildInfo             
-        execution:
-          onExecute:
-            - echo $my_env_var
-            - if [ -z $app_version ]; then add_pipeline_variables app_version=1.0.0; else app_version=$(bump_semver $app_version minor); fi
-            - write_output myBuildInfo "buildNumber=$app_version"
-            - add_run_variables run_var="hello"
-      - name: step_2
-        type: Bash
-        configuration:
-          inputResources:
-            - name: myBuildInfo            
-          runtime:
-            type: image
-            image:
-              auto:
-                language: java
-                versions: ['11']
-        execution:
-          onExecute:
-            - echo $run_var  
-            - echo $res_myBuildInfo_buildNumber
-      - name: step_3
-        type: Bash
-        configuration:
-          environmentVariables:
-            step_env_var1: "hello"
-          inputSteps:
-            - name: step_2
-        execution:
-          onExecute:
-            - echo $step_env_var1
-      - name: step_4
-        type: Bash
-        configuration:
-          inputSteps:
-            - name: step_2
-        execution:
-          onExecute:
-            - echo $app_version
-      - name: step_5
-        type: Bash
-        configuration:
-          inputSteps:
-            - name: step_3
-            - name: step_4  
+            - name: docker_repo
           integrations:
-            - name: my_github            
-        execution:
-          onExecute:
-            - 'curl -H "Authorization: token ${int_my_github_token}" ${int_my_github_url}/rate_limit'
+            - name: gitIntegration
+      - name: docker_push
+        type: DockerPush
+        configuration:
+          affinityGroup: grDocker
+          targetRepository: toolbox-docker
+          integrations:
+            - name: gitIntegration
+          inputSteps:
+            - name: docker_build
+          outputResouces:
+            - name: docker_image
+      - name: publish_build_info
+        type: PublishBuildInfo
+        configuration:
+          inputSteps:
+            - name: docker_push
+          outputResouces:
+            - name: docker_build_info
+      - name: promote_build
+        type: PromoteBuild
+        configuration:
+          targetRepository: toolbox-docker
+          integrations:
+            - name: gitIntegration
+          inputResources:
+            - name: docker_build_info
+          outputResouces:
+            - name: docker_promoted_build_info
